# Plover_Japanese_StenoWord

./: LICENSE  MANIFEST.in  README.md  setup.cfg
plover_japanese_stenoword/: system.py
plover_japanese_stenoword/dictionaries/: StenoWord sticky.json  StenoWord-Roma sticky.json  StenoWord-Roma unstick.json  StenoWord.json  commands.json
