[metadata]
name = plover_japanese_stenoword
version = 0.0.1
description = The true StenoWord for plover.
long_description = file: README.md
long_description_content_type = text/markdown
author = meltedsoftcream
license = CC ND 1.0
url = https://github.com/meltedsoftcream/plover_japanese_stenoword
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
                 plover>=4.0.0.dev1
packages =
	plover_japanese_stenoword

[options.entry_points]
plover.system =
  Japanese StenoWord = plover_japanese_stenoword.system
